--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4",
+        "tailwindcss-plugins": "^0.3.0",
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {}
