added database config

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:F5dakebAzXn4eNk55TSJCH/cTAUOrS0fcg25lYCA/ds=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=sql8.freesqldatabase.com
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=sql8716984
+DB_USERNAME=sql8716984
+DB_PASSWORD=rwBGXQe2dE
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
